--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
-jellyfin
-- https://github.com/jellyfin/jellyfin/issues/15299#event-21260198139
+https://github.com/jellyfin/jellyfin/issues/15299#event-21260198139
+version pin jellyfin
 theia
 webdav
 restore immich?
